--- a/index.html
+++ b/index.html
@@ -78,26 +78,58 @@
         <h2>サークルの概要・活動紹介</h2>
       </div>
     </div>
-    <div>
-      <p>つくちりこと、筑波大学地理愛好会は「地理」をキーワードとした様々な活動を行っています。</p>
-      <p>筑波大学地理愛好会は「地理」をキーワードとした様々な活動を行っています。旅行やドライブにでかけたり、巡検にでかけたり。勉強会を行ったり雙峰祭で発表を行ったり。イベントへの参加に強制はないので、自分の興味に従って参加することができます。</p>
-      <p>
-        また、新しいイベントや活動も自由に作るのも大歓迎です！2019年度も運転練習会という、レンタカーを一日借りて運転の練習をしつつ観光を行うイベントが作られ、半年で既に5回以上実施されています。地理愛に入れば大学生活が充実すること間違いなし！様々な学類の友達ができること間違いなし！<strong>堅いのは名前だけ！</strong>あなたの入会を心よりお待ちしております。</p>
+    <div class="con-main">
+      <p>つくちりこと、筑波大学地理愛好会は「地理」をキーワードとした様々な活動を行っています。旅行やドライブ・巡検といった活動から、勉強会や雙峰祭での発表といった学術的な活動まで、幅広い活動をしていることが特徴です。2018年度にスタートしたサークルですが会員は早くも100名を目前としています。まだまだ会員は募集中ですので今回の発表で興味を持った方はぜひ見学にお越しください！</p>
+      <h2>今回の発表について</h2>
+      <p>今回の雙峰祭はオンラインでの開催ということで、つくちりもオンラインでの発表を準備しました。その拠点となるものがこの特設ホームページです。このホームページでは会で行った巡検や、会や個人で行った調査・研究をレポートとして公開しています。</p>
       <h2>実施した巡検・企画</h2>
-      <p>近年実施した巡検の一覧です。</p>
-      <table id="jList">
-        <tbody>
-          <tr>
-            <td>2021/09/29</td>
-            <td>テスト</td>
-          </tr>
-          <tr>
-            <td>a</td>
-            <td>a</td>
-          </tr>
-        </tbody>
-      </table>
+      <h3>2021年度</h3>
+      <ul>
+      <li>袋田大子</li>
+      <li>九十九里巡検</li>
+      <li>阿武隈</li>
+      <li>筑波山険道チャレンジ</li>
+      <li>いわき</li>
+      <li>運転練習会（ダーツの旅）</li>
+      <li>博物館・自然地形観察</li>
+      <li>日光白根山</li>
+      <li>那須</li>
+      <li>宇都宮巡検</li>
+      <li>歴史的建造物</li>
+      <li>成田</li>
+      <li>つくば駅ゲーム</li>
+      <li>かすみがうら</li>
+      <li>国土地理院</li>
+      <li>筑波山</li>
+      </ul>
+      <h3>2020年度</h3>
+      <ul>
+      <li>三浦半島</li>
+      <li>前橋・高崎</li>
+      <li>水戸</li>
+      <li>房総半島</li>
+      </ul>
+      <h3>2019年度</h3>
+      <ul>
+      <li>水戸</li>
+      <li>伊豆大島</li>
+      <li>鹿行</li>
+      <li>柿岡地磁気観測所</li>
+      <li>舞鶴・天橋立・城崎温泉等</li>
+      <li>宇都宮</li>
+      <li>国土地理院・地質標本館</li>
+      </ul>
+      <h3>2018年度</h3>
+      <ul>
+      <li>浅草・両国</li>
+      <li>福来みかん・真壁</li>
+      </ul>
     </div>
+    <div class="footer">
+      <a href="#"><img src="img/titleL.svg" alt="TSUKUCHIRI SOHOSAI 2021"></a>
+      <span>© 2021 Tsukuchiri All Right Reserved.</span>
+    </div>
+
   </div>
   <div class="content" id="s-report">
     <div class="header">
@@ -116,7 +148,7 @@
         <h2>巡検・調査・研究の紹介</h2>
       </div>
     </div>
-    <div>
+    <div class="con-main">
       <p>ここでは、会や会員個人で行った巡検・調査・研究について紹介します。</p>
       <h2>巡検</h2>
       <a class="article" href="report/99.html">
@@ -147,6 +179,11 @@
         </div>
       </a>
     </div>
+    <div class="footer">
+      <a href="#"><img src="img/titleL.svg" alt="TSUKUCHIRI SOHOSAI 2021"></a>
+      <span>© 2021 Tsukuchiri All Right Reserved.</span>
+    </div>
+
   </div>
 </body>
 
