--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css?aa">
+  <link rel="stylesheet" href="css/style.css?aaa">
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,500,700,900&display=swap&subset=japanese" rel="stylesheet">
   <title>TSUKUCHIRI SOHOSAI 2021</title>
 </head>
@@ -167,6 +167,16 @@
         <div><h2>地理愛好会会員で市区町村制覇を作ってみた</h2><p></p>
         </div>
       </a>
+      <a class="article" href="report/shukusha.html">
+        <div><img src="report/img/shukusha/titlebg.jpg"></div>
+        <div><h2>商業施設紹介 佐久平編</h2><p></p>
+        </div>
+      </a>
+      <a class="article" href="report/sakudaira.html">
+        <div><img src="report/img/sakudaira/titlebg.jpg"></div>
+        <div><h2>商業施設紹介 佐久平編</h2><p></p>
+        </div>
+      </a>
       <h2>研究</h2>
       <a class="article" href="report/nara.html">
         <div><img src="report/img/nara/titlebg.jpg"></div>
@@ -176,6 +186,12 @@
       <a class="article" href="report/sapporo.html">
         <div><img src="report/img/sapporo/titlebg.jpg"></div>
         <div><h2>道路のズレは〇〇のズレ ～碁盤の目状の都市における歴史と珍現象を探る～</h2><p></p>
+        </div>
+      </a>
+      <h2>and more...</h2>
+      <a class="article" href="https://tsukuchiri.blog.jp" target="_blank">
+        <div><img src="img/KIAI_Logo_sp.png"></div>
+        <div><h2>KIAI Explorer's Diary</h2><p>会員が書いたレポートは他にも存在します。ぜひご覧ください。</p>
         </div>
       </a>
     </div>
