--- a/report/99.html
+++ b/report/99.html
@@ -28,7 +28,7 @@
     </div>
   </div>
   <main>
-    <p>7月24日に行った九十九里・匝瑳巡検について、印象に残ったことや、気になったことを挙げながらご紹介したいと思います！</p>
+    <p>九十九里・匝瑳巡検について、印象に残ったことや、気になったことを挙げながらご紹介したいと思います！</p>
 
     <p>実施日はちょうど天気にも恵まれ、九十九里浜の景色を存分に眺めることができました。</p>
 
