--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
     </div>
     <div class="con-main">
-      <p>つくちりこと、筑波大学地理愛好会は「地理」をキーワードとした様々な活動を行っています。旅行やドライブ・巡検といった活動から、勉強会や雙峰祭での発表といった学術的な活動まで、幅広い活動をしていることが特徴です。2018年度にスタートしたサークルですが会員は早くも100名を目前としています。まだまだ会員は募集中ですので今回の発表で興味を持った方はぜひ見学にお越しください！</p>
+      <p>つくちりこと、筑波大学地理愛好会は「地理」をキーワードとした様々な活動を行っています。旅行やドライブ・巡検といった活動から、勉強会や雙峰祭での発表といった学術的な活動まで、幅広い活動をしていることが特徴です。2018年度にスタートしたサークルですが会員は早くも100名を目前としています。</p>
       <h2>今回の発表について</h2>
       <p>今回の雙峰祭はオンラインでの開催ということで、つくちりもオンラインでの発表を準備しました。その拠点となるものがこの特設ホームページです。このホームページでは会で行った巡検や、会や個人で行った調査・研究をレポートとして公開しています。</p>
       <h2>実施した巡検・企画</h2>
